# keyboard_layout_lessons

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: bone.rs  bone_app.rs  key.rs  lesson.rs  lib.rs  main.rs  trainer.rs
src/app/: mod.rs  selectable_session_list.rs  trainer.rs  training_session.rs
src/core/: character.rs  enums.rs  key.rs  keyboard_layout.rs  lesson.rs  mod.rs  stats.rs  trainer.rs  typing_errors.rs  typing_speed.rs  weighting_strategy.rs
src/layouts/: bone.rs  mod.rs
src/ui/: app.rs  events.rs  mod.rs  rendering.rs
src/wrapper/: clock.rs  fake_clock.rs  mod.rs
