[package]
name = "keyboard_layout_lessons"
version = "0.1.0"
authors = ["Benjamin Fleischmann <benny.fleischmann@gmail.com>"]
edition = "2018"

[[bin]]
name = "trainer"
path = "src/main.rs"

[dependencies]
rand = "*"
termion = "1.5"
serde = {version = "*", features = ["derive"] }
serde_json = "*"
tui = { version = "0.16", default-features = false, features = ['termion', 'serde'] }
text-diff = "0.4.0"

[dev-dependencies]
pretty_assertions = "0.7.2"
#cucumber_rust = "0.8.4"